@@ -1,7 +1,7 @@
 density <-
-    function(x, bw, adjust = 1,
-             kernel=c("gaussian", "epanechnikov", "rectangular", "triangular",
-               "biweight", "cosine", "optcosine"),
+    function(x, bw = "nrd0", adjust = 1,
+             kernel = c("gaussian", "epanechnikov", "rectangular",
+             "triangular", "biweight", "cosine", "optcosine"),
              window = kernel, width,
              give.Rkern = FALSE,
              n = 512, from, to, cut = 3, na.rm = FALSE)
@@ -40,15 +40,33 @@ density <-
     n <- max(n, 512)
     if (n > 512) n <- 2^ceiling(log2(n)) #- to be fast with FFT
 
-    if (missing(bw))
-      bw <-
-        if(missing(width)) {
-            hi <- sd(x)
-            if(!(lo <- min(hi, IQR(x)/1.34)))# qnorm(.75) - qnorm(.25) = 1.34898
-                (lo <- hi) || (lo <- abs(x[1])) || (lo <- 1.)
-            adjust * 0.9 * lo * N^(-0.2)
-        } else 0.25 * width
+    if (missing(bw) && !missing(width)) {
+        if(is.numeric(width)) bw <- width/4
+        if(is.character(width)) bw <- width
+    }
+    if (is.character(bw)) {
+        bw <- switch(tolower(bw),
+                     nrd0 = bw.nrd0(x),
+                     nrd = bw.nrd(x),
+                     ucv = bw.ucv(x),
+                     bcv = bw.bcv(x),
+                     SJ = ,
+                     "sj-ste" = bw.SJ(x, method="ste"),
+                     "sj-dpi" = bw.SJ(x, method="dpi"),
+                     stop("unknown bandwidth rule"))
+# width adjustments from V&R 1994 p.137.
+#        if(kernel != "gaussian")
+#         bw <- bw * switch(kernel,
+#                       rectangular = 1/1.15,
+#                       triangular  = 1.393/1.15,
+#                       epanechnikov= 1.272/1.15,
+#                       biweight    = NA,
+#                       cosine      = NA,
+#                       optcosine   = NA
+#                       )
+    }
     if (!is.finite(bw)) stop("non-finite `bw'")
+    bw <- adjust * bw
     if (bw <= 0) stop("`bw' is not positive.")
 
     if (missing(from))
@@ -120,4 +138,139 @@ print.density <- function(x, digits=NULL, ...)
 	"\tBandwidth 'bw' = ",formatC(x$bw,digits=digits), "\n\n",sep="")
     print(summary(as.data.frame(x[c("x","y")])), digits=digits, ...)
     invisible(x)
+}
+
+#====           bandwidth selection rules              ====
+
+bw.nrd0 <- function (x)
+{
+    hi <- sd(x)
+    if(!(lo <- min(hi, IQR(x)/1.34)))# qnorm(.75) - qnorm(.25) = 1.34898
+        (lo <- hi) || (lo <- abs(x[1])) || (lo <- 1.)
+    0.9 * lo * length(x)^(-0.2)
+}
+
+bw.nrd <- function (x)
+{
+    r <- quantile(x, c(0.25, 0.75))
+    h <- (r[2] - r[1])/1.34
+    1.06 * min(sqrt(var(x)), h) * length(x)^(-1/5)
+}
+
+bw.SJ <- function(x, nb = 1000, lower = 0.1*hmax, upper = hmax,
+		     method = c("ste", "dpi"))
+{
+    fSD <- function(h, x, alph2, c1, n, d)
+        (c1/SDh(x, alph2 * h^(5/7), n, d))^(1/5) - h
+    SDh <- function(x, h, n, d)
+        .C("band_phi4_bin",
+           as.integer(n),
+           as.integer(length(x)),
+           as.double(d),
+           x,
+           as.double(h),
+           u = double(1),
+           PACKAGE="base")$u
+    TDh <- function(x, h, n, d)
+        .C("band_phi6_bin",
+           as.integer(n),
+           as.integer(length(x)),
+           as.double(d),
+           x,
+           as.double(h),
+           u = double(1),
+           PACKAGE="base")$u
+
+    method <- match.arg(method)
+    n <- length(x)
+    storage.mode(x) <- "double"
+    n <- length(x)
+    Z <- .C("band_den_bin",
+            as.integer(n),
+            as.integer(nb),
+            d = double(1),
+            x,
+            cnt = integer(nb),
+            PACKAGE="base")
+    d <- Z$d; cnt <- as.integer(Z$cnt)
+    hmax <- 1.144 * sqrt(var(x)) * n^(-1/5)
+    scale <- min(sqrt(var(x)), IQR(x)/1.349)
+    a <- 1.24 * scale * n^(-1/7)
+    b <- 1.23 * scale * n^(-1/9)
+    c1 <- 1/(2*sqrt(pi)*n)
+    TD  <- -TDh(cnt, b, n, d)
+    alph2 <- 1.357*(SDh(cnt, a, n, d)/TD)^(1/7)
+    if(method == "dpi")
+        res <- (c1/SDh(cnt,(2.394/(n * TD))^(1/7) , n, d))^(1/5)
+    else {
+        if (fSD(lower, cnt, alph2, c1, n, d) *
+            fSD(upper, cnt, alph2, c1, n, d) > 0)
+            stop("No solution in the specified range of bandwidths")
+        res <- uniroot(fSD, c(lower, upper), tol=0.1*lower,
+                       x=cnt, alph2=alph2, c1=c1, n=n, d=d)$root
+    }
+    res
+}
+
+
+bw.ucv <- function(x, nb = 1000, lower = 0.1*hmax, upper = hmax)
+{
+    fucv <- function(h, x, n, d)
+        .C("band_ucv_bin",
+           as.integer(n),
+           as.integer(length(x)),
+           as.double(d),
+           x,
+           as.double(h),
+           u = double(1),
+           PACKAGE="base")$u
+
+    n <- length(x)
+    hmax <- 1.144 * sqrt(var(x)) * n^(-1/5)
+    storage.mode(x) <- "double"
+    Z <- .C("band_den_bin",
+            as.integer(n),
+            as.integer(nb),
+            d = double(1),
+            x,
+            cnt = integer(nb),
+            PACKAGE="base"
+            )
+    d <- Z$d; cnt <- as.integer(Z$cnt)
+    h <- optimize(fucv, c(lower, upper), tol=0.1*lower,
+                  x=cnt, n=n, d=d)$minimum
+    if(h < 1.1*lower | h > upper-0.1*lower)
+        warning("minimum occurred at one end of the range")
+    h
+}
+
+bw.bcv <- function(x, nb = 1000, lower = 0.1*hmax, upper = hmax)
+{
+    fbcv <- function(h, x, n, d)
+        .C("band_bcv_bin",
+           as.integer(n),
+           as.integer(length(x)),
+           as.double(d),
+           x,
+           as.double(h),
+           u = double(1),
+           PACKAGE="base")$u
+
+    n <- length(x)
+    hmax <- 1.144 * sqrt(var(x)) * n^(-1/5)
+    storage.mode(x) <- "double"
+    Z <- .C("band_den_bin",
+            as.integer(n),
+            as.integer(nb),
+            d = double(1),
+            x,
+            cnt = integer(nb),
+            PACKAGE="base"
+            )
+    d <- Z$d; cnt <- as.integer(Z$cnt)
+    h<- optimize(fbcv, c(lower, upper), tol=0.1*lower,
+                 x=cnt, n=n, d=d)$minimum
+    if(h < 1.1*lower | h > upper-0.1*lower)
+        warning("minimum occurred at one end of the range")
+    h
 }
