@@ -1,0 +1,83 @@
+\name{bandwidth}
+\alias{bw.nrd0}
+\alias{bw.nrd}
+\alias{bw.ucv}
+\alias{bw.bcv}
+\alias{bw.SJ}
+\title{Bandwidth Selectors for Kernel Density Estimation}
+\usage{
+bw.nrd0(x)
+bw.nrd(x)
+bw.ucv(x, nb = 1000, lower, upper)
+bw.bcv(x, nb = 1000, lower, upper)
+bw.SJ(x, nb=1000, lower, upper, method=c("ste", "dpi"))
+}
+\arguments{
+  \item{x}{A data vector.}
+  \item{nb}{number of bins to use.}
+  \item{lower, upper}{Range over which to minimize.  The default is
+    almost always satisfactory.}
+  \item{method}{Either \code{"ste"} ("solve-the-equation") or
+    \code{"dpi"} ("direct plug-in").}
+}
+\description{
+  Bandwidth selectors for gaussian windows in \code{\link{density}}.
+}
+
+\details{
+  \code{bw.nrd0} implements a rule-of-thumb for
+  choosing the bandwidth of a Gaussian kernel density estimator.
+  It defaults to 0.9 times the
+  minimum of the standard deviation and the interquartile range divided by
+  1.34 times the sample size to the negative one-fifth power
+  (= Silverman's ``rule of thumb'') \emph{unless} the quartiles
+  coincide when a positive result will be guaranteed.
+
+  \code{bw.nrd} is the more common variation given by Scott (1992).
+
+  \code{bw.ucv} and \code{bw.bcv} implement unbiased and
+  biased cross-validation respectively.
+
+  \code{bw.SJ} implements the methods of Sheather & Jones (1991)
+  to select the bandwidth using pilot estimation of derivatives.
+}
+\value{
+  A bandwidth on a scale suitable for the \code{bw} argument
+  of \code{density}.
+}
+\seealso{
+  \code{\link{density}}.
+
+  \code{\link[MASS]{bandwith.nrd}}, \code{\link[MASS]{ucv}},
+  \code{\link[MASS]{bcv}} and \code{\link[MASS]{width.SJ}} in
+  \code{MASS}, which are all scaled to the \code{width} argument of
+  \code{density} and so give answers four times as large.
+}
+\references{
+Scott, D. W. (1992)
+\emph{Multivariate Density Estimation: Theory, Practice, and  Visualization.}
+Wiley.
+
+Sheather, S. J. and Jones, M. C. (1991) A reliable data-based bandwidth
+selection method for kernel density estimation.
+\emph{Journal of the Royal Statistical Society series B}
+\bold{53}, 683--690.
+
+Venables, W. N. and Ripley, B. D. (1999)
+\emph{Modern Applied Statistics with S-PLUS.}
+Springer.
+}
+\examples{
+data(precip)
+plot(density(precip, n=1000))
+lines(density(precip, bw="nrd"), col = 2)
+lines(density(precip, bw="ucv"), col = 3)
+lines(density(precip, bw="bcv"), col = 4)
+lines(density(precip, bw="SJ-ste"), col = 5)
+lines(density(precip, bw="SJ-dpi"), col = 6)
+legend(55, 0.035,
+       legend = c("nrd0", "nrd", "ucv", "bcv", "SJ-ste", "SJ-dpi"),
+       col = 1:6, lty = 1)
+}
+\keyword{distribution}
+\keyword{smooth}
